# Model-yard

./: .gitignore  AGENTS.md  PROJECT_BRIEF.md  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
app/: globals.css  layout.tsx  page.tsx
components/: AppHeader.tsx  BackgroundPicture.tsx  BenchTable.tsx  ChatInput.test.tsx  ChatInput.tsx  Inspector.tsx  LeftSidebar.tsx  PromptComposer.tsx  ResultCard.tsx
components/ui/: button.tsx  card.tsx  input.tsx  popover.tsx  scroll-area.tsx  select.tsx  slider.tsx  switch.tsx  tabs.tsx  textarea.tsx
documentation/ollama/: README.md
documentation/ollama/api/: endpoints.md  response-shapes.md
documentation/ollama/app-development/: model-metadata.md  product-guidance.md
documentation/ollama/capabilities/: streaming-and-thinking.md
documentation/ollama/local-observations/: current-machine.md
documentation/ollama/storage/: model-storage.md
lib/: background-image.test.ts  background-image.ts  chat.test.ts  chat.ts  constants.ts  format.ts  static-backgrounds.ts  storage.ts  tauri.ts  types.ts
src/: App.tsx  globals.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/model-yard/: chat-thread.tsx  config-sidebar.tsx  controls.tsx  download-progress.test.tsx  download-progress.tsx  model-browser.tsx  model-catalog-column.tsx  model-tag-column.tsx  navigation.tsx  settings-workspace.tsx  shared.test.ts  shared.tsx
