[package]
name = "ollama-model-lab"
version = "0.1.0"
description = "Local Ollama model testing bench"
authors = ["Boran"]
edition = "2021"

[lib]
name = "ollama_model_lab_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["process"] }
futures-util = "0.3"

